<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SampleApplication" >

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3" 
        android:orientation="vertical">
        
       <TextView 
           	android:id="@+id/label_top"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text= "@string/topLabel"
	        android:textSize="15sp"
	        android:textAlignment="center"
	        android:textStyle="bold"
	        />
          
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <EditText
	        android:id="@+id/username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	         android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:ems="10"
	        android:hint="@string/username" />
	       
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	 		android:inputType="textPassword"
	 		android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:hint="@string/password" />

    </LinearLayout>
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2" 
        android:orientation="horizontal">
    
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="45dp"
            android:onClick="onButtonClicked"
            android:text="Cancel" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="onButtonClicked"
            android:text="Confirm" />

      </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3" 
        android:orientation="horizontal">
     
     <TextView 
           	android:id="@+id/label_empty"
           	android:layout_weight="0.3"
           	android:layout_width="0dip"
	        android:layout_height="match_parent"
	        />
       <TextView 
           	android:id="@+id/label_bottm"
           	android:layout_weight="0.7"
           	android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:text= "@string/bottomLabel"
	        android:textSize="15sp"
	        android:textAlignment="center"
	        android:textStyle="bold"
	        />
          
        </LinearLayout>
</LinearLayout>